# Instagram-Socials-Downloader

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  fileagent.cpp  fileagent.h  instagram.cpp  instagram.h  lang.cpp  manager.cpp  manager.h  utils.cpp  utils.h
src/dialogs/: CMakeLists.txt  blockingoverlay.cpp  blockingoverlay.h  infodialog.cpp  infodialog.ui  mediaviewerdialog.cpp  profilechecker.cpp  profilechecker.h  profilechecker.ui  profilewindow.cpp  profilewindow.h  profilewindow.ui
src/gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingswindow.cpp  settingswindow.h  settingswindow.ui
src/resources/: resources.qrc
src/templates/: profiles.json  settings.json
